--- a/environment.yaml
+++ b/environment.yaml
@@ -25,7 +25,8 @@ dependencies:
     - vegafusion-jupyter=1.4.3  
     - vega_datasets     
     - jinja2
-    - pip>=23.2.1    
+    - pip>=23.2.1  
+    - pytest=7.4.3 
     - pip:
         - mglearn
         - graphviz
