--- a/environment.yaml
+++ b/environment.yaml
@@ -9,13 +9,13 @@ channels:
 dependencies:
     - python=3.10
     - ipykernel=6.26.0
-    - pandas>=2.1.1
-    - scikit-learn>=1.3.1
-    - requests>=2.24.0
+    - pandas=2.1.1
+    - scikit-learn=1.3.1
+    - requests=2.24.0
     - ipython
     - altair=5.1.2
     - vegafusion=1.4.3  
     - vegafusion-python-embed  
     - vegafusion-jupyter=1.4.3  
-    - pip>=23.2.1  
-    - pytest=7.4.3 s
+    - pip=23.2.1  
+    - pytest=7.4.3
