--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  book-env:
+  analysis-env:
     image: cchang5/dsci_522_group_8_bank_marketing:58fe205
     ports:
       - "8889:8888"
